--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 0 auto;
+  background: #f5f5f5;
+  color: #504650;
+  min-width: 230px;
+  max-width: 550px;
+  font-weight: 300;
+}
+
+.stopwatch {
+  margin-top: 150px;
+  position: relative;
+  border-radius: 2px;
+}  
+
+.headline {
+  width: 100%;
+  font-size: 100px;
+  font-weight: 100;
   text-align: center;
+  color: rgba(0, 0, 0, 0.705);
+  /* text-rendering: optimizeLegibility; */
+  margin: 20px auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.indicator {
+  background: #fff;
+  width: 100%;
+  font-size: 100px;
+  font-weight: 100;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.842);
+  text-rendering: optimizeLegibility;
+  box-shadow: 0 2px 4px 0 rgb(0 0 0 / 20%), 0 25px 50px 0 rgb(0 0 0 / 10%);
+  margin: 0 auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.main {
+  padding-top: 40px;
+  padding-bottom: 20px;
+  border: none;
+  box-shadow: inset 0 -2px 1px rgb(0 0 0 / 3%);
+  background: rgb(255, 255, 255);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  font-size: 24px;
 }
 
-.App-link {
-  color: #61dafb;
+.button {
+  border-width: 1px;
+  cursor: pointer;
+  justify-content: center;
+  padding-bottom: calc(0.5em - 1px);
+  padding-left: 1em;
+  padding-right: 1em;
+  padding-top: calc(0.5em - 1px);
+  text-align: center;
+  white-space: nowrap;
+  border-radius: 3px;
+  margin: auto;
+}  
+
+.is-click {
+  background-color: #3bc8e0;
+  border-color: transparent;
+  color: #fff
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.is-click:hover {
+  background-color: rgb(226, 49, 18);
 }
